objects/C_I_Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <referenceTo>CI_Certification__c</referenceTo>
        <relationshipLabel>C&amp;I Checklist Items</relationshipLabel>
        <relationshipName>C_I_Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <label>Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Resubmitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>C&amp;I Checklist Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;I Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>